gfx/thebes/gfxFontUtils.cpp
@@ -1503,7 +1503,7 @@ gfxFontUtils::ReadNames(const char *aNameData, uint32_t aDataLen,
         // skip over unwanted platform data
         platformID = nameRecord->platformID;
         if (aPlatformID != PLATFORM_ALL
-            && uint32_t(nameRecord->platformID) != PLATFORM_ID)
+            && platformID != uint32_t(aPlatformID))
             continue;
 
         // skip over unwanted languages
